--- a/frix63/style.css
+++ b/frix63/style.css
@@ -352,8 +352,58 @@
         overflow: hidden;
         transition: 0.1s;
         margin-bottom: 5vw;
+        cursor: pointer;
     }
     
     .photoswrapper:hover {
         filter: blur(3px) grayscale(80%);
+        opacity: 50%;
+    }
+    
+    .ImgEnlargeWrapper {
+        pointer-events: none;
+        z-index: -1;
+        margin: -52vw 6vw;
+        overflow: hidden;
+        transition: 0.1s;
+        position: absolute;
+    }
+    
+    .enlargeTBox {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .enlargeT {
+        transition: 0.1s;
+        color: white;
+        font-size: 20vw;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+    }
+    
+    .Frix63 {
+        z-index: -10;
+        width: 99.6vw;
+        height: 99vh;
+        top: 0;
+        left: 0;
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-items: center;
+        justify-content: center;
+        z-index: -5;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .ImageView {
+        z-index: 20;
+        height: 100%;
+        width: 100%;
+        background-color: black;
+        opacity: 50%;
     }
