--- a/frix63/style.css
+++ b/frix63/style.css
@@ -135,7 +135,7 @@
         height: 99vh;
         top: 0;
         left: 0;
-        position: absolute;
+        position: fixed;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -255,7 +255,7 @@
         height: 0vh;
         top: 0;
         left: 0;
-        position: absolute;
+        position: fixed;
         display: flex;
         justify-content: center;
     }
@@ -401,9 +401,13 @@
     }
     
     .ImageView {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
         z-index: 20;
-        height: 100%;
-        width: 100%;
-        background-color: black;
+        height: 100vh;
+        width: 100vw;
+        background-color: white;
         opacity: 50%;
     }
