--- a/BlackAndWhite/stylesheet.css
+++ b/BlackAndWhite/stylesheet.css
@@ -98,7 +98,7 @@ p {
     color: white;
 }
 ul {
-    left: 100px;
+    left: calc(20px + 10vw);
     top: 0;
     position: absolute;
     width: 75%;
@@ -107,15 +107,19 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    background: black;
 }
 li {
     float: left;
+    vertical-align: middle;
+    line-height: 50px; 
 }
 li a {
-    padding: 15px 3vw;
+    padding: 0px 2vw;
     display: block;
     color: white;
     background-color: black;
+    font-size: calc(5px + 1vw);
 }
 .header {
     position: absolute;
@@ -126,11 +130,11 @@ li a {
     background: black;
 }
 .logo {
-    font-size: 60px;
+    font-size: calc(2vw + 20px);
     text-align: center;
     vertical-align: middle;
     line-height: 50px; 
-    width: 100px;
+    width: 10vw;
     height: 50px;
     color: white;
 }
