--- a/BlackAndWhite/stylesheet.css
+++ b/BlackAndWhite/stylesheet.css
@@ -44,7 +44,7 @@ body {
     color: white;
 }
 article{
-    position: absolute;
+    position: relative;
     width: 40vw;
     left: 50%;
     transform: translate(-57%, 0);
@@ -57,6 +57,30 @@ h2 {
 p {
     margin: 0 0;
     font-size: 3vw;
+}
+.buyButton{
+    z-index: 1;
+    top: 1vw;
+    position: relative;
+    height: 10vw;
+    width: 30vw;
+    background: black;
+    border-radius: 2vw;
+}
+.shopbuyIcon {
+    z-index: 0;
+    position: absolute;
+    height: 5vw;
+    left: 2vw;
+    top: 50%;
+    transform: translate(0%, -50%);
+}
+.price {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 5vw;
+    transform: translate(-50%, -50%);
 }
 .homePageMain {
     position: absolute;
