--- a/BlackAndWhite/stylesheet.css
+++ b/BlackAndWhite/stylesheet.css
@@ -44,10 +44,11 @@ body {
 }
 .productImageMobile {
     position: absolute;
+    object-fit: cover;
     left: 50%;
-    transform: translate(-50%, -10%);
-    width: auto;
-    height: 40vw;
+    transform: translate(-50%, -20%);
+    width: 70vw;
+    height: 49vw;
     border-radius: 10px;
 }
 .TextProduct {
@@ -57,6 +58,15 @@ body {
     top: calc(180px + 55vw);
     height: 55vw;
     width: 50%;
+    color: white;
+}
+.TextProductMobile {
+    z-index: 1;
+    position: absolute;
+    right: 0;
+    top: calc(180px + 95vw);
+    height: 20vw;
+    width: 100%;
     color: white;
 }
 article{
@@ -79,9 +89,31 @@ p {
     top: 1vw;
     position: relative;
     height: 10vw;
-    width: 30vw;
+    width: 40vw;
     background: black;
     border-radius: 2vw;
+}
+.buyButtonMobile{
+    z-index: 1;
+    top: 6vw;
+    left: 50%;
+    position: relative;
+    height: 10vw;
+    width: 40vw;
+    border-radius: 2vw;
+    background: black;
+}
+.blwhMobile {
+    position: absolute;
+    transform: translate(+70%,0);
+}
+.tenNejMobile{
+    position: absolute;
+    transform: translate(-50%,0);
+}
+.artMobile{
+    color: white;
+    display: block!important;
 }
 .shopbuyIcon {
     z-index: 0;
@@ -249,9 +281,34 @@ footer {
     margin: 0 0;
 }
 
+.Button1{
+    background: white;
+    position: absolute;
+    width: 50vw;
+    height: 30vw;
+    border-radius: 5vw;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.BUY {
+    color: black;
+    position: absolute;
+    font-size: 20vw;
+    padding: 3vw 6vw;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 @media screen and (max-width: 850px) {
     .Obrazek, .TextProduct, article{
+        display: none!important;
+    }
+}
+@media screen and (min-width: 850px) {
+    .ObrazekMobile, .TextProductMobile, .artMobile{
         display: none!important;
     }
 }
