--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    cursor: default;
 }
 
 .button {
@@ -27,4 +28,9 @@ body {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    cursor: pointer;
+}
+
+a {
+    cursor: default;
 }
